# SimpleECS

./: .gitignore  CMakeLists.txt  README.md  SimpleECS.cpp  SimpleECS.sln  SimpleECS.vcxproj  SimpleECS.vcxproj.filters  Transform.h  conanfile.py
.github/docker/clang/: Dockerfile
.github/docker/gcc/: Dockerfile
.github/workflows/: run-ctest.yaml
SimpleECS.Apps/: Pong.vcxproj
SimpleECS.Apps/scripts/: pong.cpp
SimpleECS.Demos/: .gitignore  Pong.vcxproj  Pong.vcxproj.filters  README.md  imgui.ini
SimpleECS.Demos/scripts/: collisionStress.cpp  conway.cpp  momentum.cpp  piCalcMomentum.cpp  pong.cpp
SimpleECS.Library/: SimpleECS.sln  SimpleECS.vcxproj  SimpleECS.vcxproj.filters
SimpleECS.Library/include/: BoxCollider.h  Collider.h  Color.h  PhysicsBody.h  RectangleRenderer.h  SimpleECS.h  SimpleECSAPI.h
SimpleECS.Library/include/Collision/: BoxCollider.h  Collider.h
SimpleECS.Library/include/Core/: CHandle.h  Component.h  ComponentPool.h  Entity.h  Game.h  Scene.h  Timer.h
SimpleECS.Library/include/Physics/: PhysicsBody.h
SimpleECS.Library/include/Render/: FontRenderer.h  LineRenderer.h  RectangleRenderer.h
SimpleECS.Library/include/Sound/: SoundPlayer.h
SimpleECS.Library/src/: Entity.cpp  GameRenderer.h  LineRenderer.cpp  Scene.cpp  TransformUtil.h  Vector.cpp
SimpleECS.Library/src/Collision/: BoxCollider.cpp  ColliderCell.h  ColliderGrid.cpp  ColliderSystem.cpp
SimpleECS.Library/src/Core/: Entity.cpp  Game.cpp  GameRenderer.cpp  Scene.cpp  Timer.cpp
SimpleECS.Library/src/GUI/: GuiManager.cpp  GuiManager.h
SimpleECS.Library/src/Input/: Input.cpp
SimpleECS.Tests/: SimpleECS-tests.vcxproj  main.cpp  testEcsCell.cpp  testEcsDelete.cpp  testSimpleECS.sln  testSimpleECS.vcxproj
demos/: collisionStress.cpp  conway.cpp  piCalcMomentum.cpp  pong.cpp
include/: BoxCollider.h  CHandle.h  Collider.h  ColliderSystem.h  Color.h  Component.h  ComponentPool.h  Entity.h  FontRenderer.h  Game.h  GameRenderer.h  Input.h  LineRenderer.h  PhysicsBody.h  RectangleRenderer.h  Scene.cpp  Scene.h  SimpleECS_Core.h  SoundPlayer.h  Timer.h  Transform.h  Vector.h
include/Core/: ComponentPool.h
scripts/: build.py  helper.py
src/: BoxCollider.cpp  CMakeLists.txt  Collider.cpp  ColliderCell.cpp  ColliderCell.h  ColliderGrid.cpp  ColliderGrid.h  ColliderSystem.cpp  ColliderSystem.h  Component.cpp  ComponentPool.cpp  ComponentPool.h  EcsCell.cpp  EcsCell.h  Entity.cpp  FontRenderer.cpp  Game.cpp  GameRenderer.cpp  GameRenderer.h  LineRenderer.cpp  PhysicsBody.cpp  RectangleRenderer.cpp  Scene.cpp  SoundPlayer.cpp  Timer.cpp  TransformUtil.cpp  TransformUtil.h  Vector.cpp
src/Collision/: BoxCollider.cpp  ColliderGrid.cpp  ColliderGrid.h  ColliderList.cpp  ColliderList.h  ColliderSystem.cpp  ColliderSystem.h
src/Core/: Game.cpp  GameRenderer.cpp
src/GUI/: GuiManager.cpp
tests/: CMakeLists.txt
tests/performance/: CMakeLists.txt  perfCollisionSparse.cpp  perfCollisionStress.cpp
tests/unit/: CMakeLists.txt  testEcsCell.cpp  testEcsDelete.cpp
(+9 files in other folders)
